--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,15 @@
           "value": "text/plain"
         }
       ]
+    },
+    {
+      "source": "/.well-known/apple-developer-merchantid-domain-association.txt",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/plain"
+        }
+      ]
     }
   ]
 }
